--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description"
+    content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Blog de Naturaleza</title>
+  <title>Mi blog de naturaleza - Introducción sobre la naturaleza</title>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="shortcut icon" href="image/arbol.png" type="image/x-icon">
 </head>
@@ -138,8 +140,6 @@
       <!-- con paneles desplegables -->
       <h3>Beneficios para la felicidad</h3>
       <div id="paneles-content">
-        <!-- <h3>Beneficios para la felicidad</h3> -->
-        <!-- <p>(presiona sobre cada beneficio para verlo <img src="/image/down-arrow_icon-icons.com_73047.png" width="15px">)</p> -->
         <div class="paneles">
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel1" checked>
