--- a/pages/float.html
+++ b/pages/float.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi blog de naturaleza - Contacto: hablo sobre mí y mis gustos</title>
   <link rel="stylesheet" href="../styles/float.css">
+  <link rel="shortcut icon" href="../image/arbol.png" type="image/x-icon">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
     <div id="hueco">
     </div>
 
-    <div class="noticia">
+    <div class="foto-fondo">
       <h1>Sobre mí</h1>
 
       <img class="noticia__img--none"
@@ -63,14 +64,15 @@
 
         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Jk0lQkojstQ?si=rRfwW5fgqHXn2JmT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
-         <!-- <iframe data-testid="embed-iframe" style="border-radius:12px"
+        <!-- <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/vTeTapELZaQ?si=RlVD6f76EIgh7p6s&amp;start=9" title="YouTube video player"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
         <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
-          height="352" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          height="352" frameBorder="0"
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
         <!-- <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/rqKSFu6ehd0?si=cgM8JKPO7M4HG03a&amp;start=4" title="YouTube video player"
@@ -135,7 +137,7 @@
 
       <h1>Curiosidades</h1>
 
-      <p class="noticia">
+      <div class="noticia">
         <h2>Jugando antes de la cena</h2>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
@@ -163,9 +165,9 @@
           sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
           un descanso.
         </p>
-      </p>
+      </div>
 
-      <p class="noticia">
+      <div class="noticia">
       <h2>Cocina del mundo</h2>
       <img class="noticia__img--rigth" img
         src="../image/celebracion-del-dia-mundial-de-la-alimentacion-con-una-bola-o-globo-mundial-rodeado-de-comida.jpg"
@@ -174,7 +176,7 @@
       <p>Se aprenden multitud de <strong>recetas</strong> y se llega a captar el <strong>sabor de un país</strong>.</p>
       <p>Todo esto ha hecho que me meta en la cocina y experimente con los <strong>fogones</strong>, y he de decir que
         es una auténtica <strong>delicia</strong> que os sugiero.</p>
-      </p>
+      </div>
 
     </div>
 
