--- a/pages/galeria-cuadr.html
+++ b/pages/galeria-cuadr.html
@@ -57,7 +57,19 @@
 
     
 
+<!-- <h1>Galería de paseos</h1>
+    <h2>Explora la belleza de la naturaleza a través de nuestra colección de paseos al aire libre.</h2>
+    <p>Descubre paisajes impresionantes, flora y fauna diversa, y momentos inolvidables capturados durante nuestras excursiones. Cada imagen cuenta una historia de aventura y conexión con el entorno natural. ¡Inspírate para tu próxima escapada!</p> -->
 
+    <!-- Galeria -->
+    <!-- <div class="galeria">
+<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen1"/>
+<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen2"/>
+<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen3"/>
+<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen4"/>
+<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen5"/>
+<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen6"/>
+    </div> -->
 
 </body>
 
