--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,10 +5,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description"
+    content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documento</title>
-  <!--<link rel="stylesheet" href="../styles/styles.css">-->
+  <title>Mi blog de naturaleza - Paseos: hay una galería de rutas</title>
   <link rel="stylesheet" href="../styles/galeria.css">
+  <link rel="shortcut icon" href="../image/arbol.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -20,7 +23,8 @@
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-      </svg></label>
+      </svg>
+    </label>
 
     <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
     <ul class="menu-desplegable">
@@ -31,20 +35,7 @@
   </nav>
 
   <main>
-    <!-- <h1>Galería de paseos</h1>
-    <h2>Explora la belleza de la naturaleza a través de nuestra colección de paseos al aire libre.</h2>
-    <p>Descubre paisajes impresionantes, flora y fauna diversa, y momentos inolvidables capturados durante nuestras excursiones. Cada imagen cuenta una historia de aventura y conexión con el entorno natural. ¡Inspírate para tu próxima escapada!</p> -->
-
-    <!-- Galeria -->
-    <!-- <div class="galeria">
-<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen1"/>
-<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen2"/>
-<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen3"/>
-<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen4"/>
-<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen5"/>
-<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen6"/>
-    </div> -->
-
+    
     <div id="hueco"></div>
 
     <h1 id="galeria">Galería de paseos</h1>
