--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Cabecera -->
+
 <head>
   <meta charset="UTF-8">
+  <meta name="description"
+    content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Blog de Naturaleza</title>
+  <title>Mi blog de naturaleza - Estudio: hablo de lo que hay publicado sobre el tema</title>
   <link rel="shortcut icon" href="../image/arbol.png" type="image/x-icon">
-  
-  <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
-  <link rel="stylesheet" href="../styles/nosotros.css">
+   <link rel="stylesheet" href="../styles/nosotros.css">
 </head>
 
 <body>
@@ -26,12 +28,9 @@
     <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
 
     <ul class="menu-desplegable">
-      <!-- <li><a href="#lista-nosotros">Nosotros</a></li> -->
-      <!-- <li><a href="pages/checked.html">Nosotros</a></li> -->
       <li><a href="nosotros.html">Estudio</a></li>
       <li><a href="galeria.html">Paseos</a></li>
       <li><a href="float.html">Contacto</a></li>
-      <!-- <li><a href="paneles.html">Paneles</a></li> -->
     </ul>
   </nav>
 
