--- a/pages/mypracticajsn.html
+++ b/pages/mypracticajsn.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+    content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Práctica de JSON</title>
-    <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
+    <title>Mi blog de naturaleza - Listado de música</title>
+    <link rel="shortcut icon" href="../image/arbol.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/mypracticajsn.css">
     
 </head>
@@ -14,18 +16,6 @@
         <div id="lista-libros"></div>
     </div>
  
-<!-- <section id="profile">
-<h2>Logged in as <span id="displayName"></span></h2>
-<span id="avatar"></span>
-<ul>
-    <li>User ID: <span id="id"></span></li>
-    <li>Email: <span id="email"></span></li>
-    <li>Spotify URI: <a id="uri" href="#"></a></li>
-    <li>Link: <a id="url" href="#"></a></li>
-    <li>Profile Image: <span id="imgUrl"></span></li>
-</ul>
-</section> -->
-
    <script src="../js/mypracticajsn2.js"></script>
 
     
