--- a/pages/spotify.html
+++ b/pages/spotify.html
@@ -1,18 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi blog de naturaleza - Buscador de Canciones Spotify</title>
+    <link rel="shortcut icon" href="../image/arbol.png" type="image/x-icon">
     <title>Buscador de Canciones Spotify</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        #login-button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
-        #results { margin-top: 20px; }
-        .track-item { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; border-radius: 5px; }
-        .track-item h3 { margin-top: 0; color: #1DB954; }
-        .track-item a { color: #007bff; text-decoration: none; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        #login-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        #results {
+            margin-top: 20px;
+        }
+
+        .track-item {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        .track-item h3 {
+            margin-top: 0;
+            color: #1DB954;
+        }
+
+        .track-item a {
+            color: #007bff;
+            text-decoration: none;
+        }
     </style>
 </head>
+
 <body>
 
     <h1>Spotify: Lista de 5 Canciones</h1>
@@ -28,8 +59,10 @@
 
     <div id="results">
         <h2>Resultados de la Búsqueda</h2>
-        </div>
+    </div>
 
-    <script src="../js/spotify.js"></script> 
+    <script src="../js/spotify.js"></script>
+
 </body>
+
 </html>
